Wed Aug 26 13:48:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#unlink): reverted r23494, since the
	  usage in RubyInline is considered wrong.

Tue Feb  9 23:48:25 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_divide): fix precision too.

Tue Feb  9 23:26:07 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_DoDivmod): fix precision.
	  [ruby-core:17472][ruby-dev:35372][ruby-dev:40105][ruby-dev:40358]

Thu Dec 10 01:12:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (dyna_pop_gen): pop dvars.  [ruby-dev:39861]

Sat Dec  5 13:19:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: default ac_cv_prog_CC to CC.

Mon Feb  1 17:11:12 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* string (rb_string_value): warning for implicit conversion
	  from Symbol to String. This behavior was introduced in r22606,
	  merged in r22738 to ruby_1_9_1. It was an unexpected language
	  feature change. It will be removed from Ruby in the 1.9.2.
	  c.f. [ruby-dev:40274].

Thu Feb 26 13:23:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (cdhash_each): resurrects internal literals.

Wed Feb 18 14:33:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_resurrect), string.c (rb_str_resurrect): new
	  functions based on [ruby-dev:37983]

	* insns.def (putstring, duparray): use rb_{ary,str}_resurrect().

	* iseq.c (iseq_data_to_ary): needs to result TS_VALUE.

Wed Dec  9 09:50:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_justify): fixed the case a fill size is a
	  multiple of the length of the padding.  [ruby-dev:39856]

Sat Oct 31 17:19:28 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPResponse#each_response_header):
	  cosmetic: '?\ ' -> '?\s'

Fri Oct 30 22:09:47 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPResponse#each_response_header):